Update to version 1.7.1: iOS27-style dual-row signal (LSPosed drawable) and stability fixes